--- a/schedule.html
+++ b/schedule.html
@@ -958,8 +958,8 @@ Lectures
 <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
 <a href="./slides/EDUC641_14_continuousrel.html">13. Continuous relationships I</a>
 <a href="./slides/EDUC641_15_regression.html">14. Bivariate regression I</a>
-<span class="nav-dropdown-header">15. Bivariate regression II</span>
-<span class="nav-dropdown-header">16. Regression assumptions</span>
+<a href="./slides/EDUC641_16_residuals.html">15. Bivariate regression II</a>
+<a href="./slides/EDUC641_16_residuals.html">16. Regression assumptions</a>
 <span class="nav-dropdown-header">17. NHST critiques</span>
 <span class="nav-dropdown-header">18. NHST critiques and summary</span>
 </div>
@@ -1045,8 +1045,12 @@ Lectures
     <li>
       <a href="./slides/EDUC641_15_regression.html">14. Bivariate regression I</a>
     </li>
-    <li class="dropdown-header">15. Bivariate regression II</li>
-    <li class="dropdown-header">16. Regression assumptions</li>
+    <li>
+      <a href="./slides/EDUC641_16_residuals.html">15. Bivariate regression II</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_16_residuals.html">16. Regression assumptions</a>
+    </li>
     <li class="dropdown-header">17. NHST critiques</li>
     <li class="dropdown-header">18. NHST critiques and summary</li>
   </ul>
@@ -1313,7 +1317,9 @@ href="./slides/EDUC641_14_continuousrel.pdf">pdf</a></li>
 <li>Class 14 (11/10) slides: <a
 href="./slides/EDUC641_15_regression.html">html</a> | <a
 href="./slides/EDUC641_15_regression.pdf">pdf</a></li>
-<li>Class 15-16 slides (11/15 &amp; 11/22)
+<li>Class 15-16 slides (11/15 &amp; 11/22): <a
+href="./slides/EDUC641_16_residuals.html">html</a> | <a
+href="./slides/EDUC641_16_residuals.pdf">pdf</a>
 <ul>
 <li><strong>No class on 11/17 (David traveling for conference) and 11/24
 (university holiday)</strong></li>
