--- a/assignments.html
+++ b/assignments.html
@@ -958,8 +958,8 @@ Lectures
 <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
 <a href="./slides/EDUC641_14_continuousrel.html">13. Continuous relationships I</a>
 <a href="./slides/EDUC641_15_regression.html">14. Bivariate regression I</a>
-<span class="nav-dropdown-header">15. Bivariate regression II</span>
-<span class="nav-dropdown-header">16. Regression assumptions</span>
+<a href="./slides/EDUC641_16_residuals.html">15. Bivariate regression II</a>
+<a href="./slides/EDUC641_16_residuals.html">16. Regression assumptions</a>
 <span class="nav-dropdown-header">17. NHST critiques</span>
 <span class="nav-dropdown-header">18. NHST critiques and summary</span>
 </div>
@@ -1045,8 +1045,12 @@ Lectures
     <li>
       <a href="./slides/EDUC641_15_regression.html">14. Bivariate regression I</a>
     </li>
-    <li class="dropdown-header">15. Bivariate regression II</li>
-    <li class="dropdown-header">16. Regression assumptions</li>
+    <li>
+      <a href="./slides/EDUC641_16_residuals.html">15. Bivariate regression II</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_16_residuals.html">16. Regression assumptions</a>
+    </li>
     <li class="dropdown-header">17. NHST critiques</li>
     <li class="dropdown-header">18. NHST critiques and summary</li>
   </ul>
@@ -1166,8 +1170,8 @@ class="math inline">\(t\)</span>-test</p></li>
 <h2>3.4. Assignment 4</h2>
 <p>Continuous data 2: intro to bivariate regression</p>
 <p>Deadline: November 28, 11:59pm</p>
-<p>Download:
-<!-- [html file](./assignments/assignment04.html) | [cont.csv dataset](./data/cont.csv) --></p>
+<p>Download: <a href="./assignments/assignment04.html">html file</a> |
+<a href="./data/cont.csv">cont.csv dataset</a></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 <div id="final" class="section level2">
