--- a/assignments/assignment04.html
+++ b/assignments/assignment04.html
@@ -399,9 +399,16 @@ idea what the preceding sentence meant, ignore it.</em></p>
 <div id="objectives-of-this-assignment" class="section level3">
 <h3>Objectives of this assignment</h3>
 <ul>
-<li></li>
-<li><h3 id="data-background">Data Background</h3></li>
+<li><p>Create bivariate scatterplots and bivariate regression
+estimates</p></li>
+<li><p>State null hypothesis and interpret results of linear regression
+test of bivariate continuous relationship</p></li>
+<li><p>Test (some) assumptions of bivariate regression
+estimation</p></li>
 </ul>
+</div>
+<div id="data-background" class="section level3">
+<h3>Data Background</h3>
 <p>The dataset we’ll be using in this assignment is drawn from the
 NCRECE <a href="https://www.icpsr.umich.edu/web/ICPSR/studies/34848">Teacher
 Professional Development Study (PDS)</a> data. This professional
