Add assignment to schedule

--- a/schedule.html
+++ b/schedule.html
@@ -1330,9 +1330,9 @@ href="./data/life_expectancy.csv">life_expectancy.csv</a></li>
 </ul>
 <p>Assignment 4:</p>
 <ul>
-<li>Due Nov. 28, 11:59pm
-<!-- - [html file](./assignments/assignment04.html) -->
-<!-- - [cont.csv](./data/cont.csv) --></li>
+<li>Due Nov. 28, 11:59pm</li>
+<li><a href="./assignments/assignment04.html">html file</a></li>
+<li><a href="./data/cont.csv">cont.csv</a></li>
 </ul>
 </div>
 <div id="unit-5" class="section level2">
